	PR c++/8332 	PR c++/8493 	* decl.c (cxx_init_decl_processing): Use size_type_node, not 	c_size_type_node. 	* decl2.c (coerce_new_type): Likewise. 	* except.c (do_allocate_exception): Likewise.

* builtin-types.def (BT_SIZE): Use size_type_node.
	* builtins.c (fold_builtin): Make the builtin strlen returns a
	size_t, not a sizetype.
	* c-common.c (c_sizeof_or_alignof_type): Use size_type_node, not
	c_size_type_node.
	(c_alignof_expr): Likewise.
	(c_common_nodes_and_builtins): Likewise.
	* c-common.h (CTI_C_SIZE_TYPE): Remove.
	(c_size_type_node): Likewise.
	* c-format.c (T_ST): Use size_type_node, not c_size_type_node.
	* tree.h (TI_SIZE_TYPE): New enumeral.
	(size_type_node): Likewise.

	PR c++/8332
	PR c++/8493
	* g++.dg/template/strlen1.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@59689 138bc75d-0d04-0410-961f-82ee72b054a4